<resources>
    <string name="app_name">ProyectoBroadcast</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_grafico">Grafico</string>


    <string name="fechaIn">Fecha inicial</string>
    <string name="fechaFin">Fecha final</string>
    <string name="aceptar">Aceptar</string>
    <string name="seleccionSemana">Selecciona la semana</string>
    <string name="fechaInMayor">La fecha de inicio no puede ser despues de la fecha final</string>

    <string name="perdidas">Perdidas</string>
    <string name="salientes">Salientes</string>
    <string name="entrantes">Entrantes</string>

    <string name="opcion">Selecciona tipo de llamada</string>

    <string name="semana">Selecciona semana</string>

    <string name="rango">Selecciona un rango de dias</string>

    <string name="todo">Selecciona todas las llamadas</string>

    <string name="vacio">No hay llamadas en esa fecha</string>

    <string name="selecciona">Selecciona</string>
    <string name="rang">Rango</string>
    <string name="sem">Semana</string>
    <string name="fecha">Fecha</string>



</resources>
